=== master

* Make Postgres::ArrayOp#join in pg_array_ops extension work correctly on PostgreSQL <9.1 (jeremyevans)

* Make pg_enum extension work correctly on PostgreSQL 8.3-9.0 (jeremyevans)

* Emulate FILTER clause for aggregate functions using CASE on databases not supporting it directly (jeremyevans)

* Support ordering by NULLS FIRST/NULLS LAST without emulation on SQLite 3.30+ (jeremyevans)

=== 5.26.0 (2019-11-01)

* Recognize two additional foreign key constraint violation codes on MySQL 8.0.13+ (rianmcguire) (#1657)

* Support table aliases for single-table INSERT statements on PostgreSQL 9.5+ (jeremyevans) (#1656)

* Implement Sequel::Postgres::PGRange#hash so instances work correctly in hashes (jeremyevans) (#1648)

* Make dirty plugin work correctly with typecast_on_load plugin (jeremyevans) (#1647)

* Add support for :require_modification option when setting up nested_attributes (jeremyevans)

* Add support for SQL/JSON path expressions to the pg_json_ops extension, supported by PostgreSQL 12+ (jeremyevans)

=== 5.25.0 (2019-10-01)

* Fix Sequel::SQL::NumericMethods#coerce to not raise NoMethodError if super method is not defined (jeremyevans) (#1645)

* Allow setting a default for a column that already has a default on Microsoft SQL Server (jeremyevans)

* Fix keyword argument separation warnings on Ruby master branch in csv_serializer plugin (jeremyevans)

* Add association_multi_add_remove plugin for adding/removing multiple associated objects in a single method call (AlexWayfer, jeremyevans) (#1641, #1643)

* Make sharding plugin integrate with server_block extension (jeremyevans)

=== 5.24.0 (2019-09-01)

* Add Database#skip_logging? private method designed for extensions to force query timing even if no logger is present (adam12) (#1640)

* Allow a hostname specified in a defaults_file in the mysql2 adapter, by not explicitly setting :host (sapio-bdeamer) (#1638)
