@@ -353,6 +353,11 @@ describe "Blockless Ruby Filters" do
     @d.l({:x => Sequel::FALSE}).must_equal '(x IS FALSE)'
     @d.l({:x => Sequel::SQLTRUE}).must_equal '(x IS TRUE)'
     @d.l({:x => Sequel::SQLFALSE}).must_equal '(x IS FALSE)'
+
+    @d.l({:x => Sequel::CURRENT_DATE}).must_equal '(x = CURRENT_DATE)'
+    @d.l({:x => Sequel::CURRENT_TIME}).must_equal '(x = CURRENT_TIME)'
+    @d.l({:x => Sequel::CURRENT_TIMESTAMP}).must_equal '(x = CURRENT_TIMESTAMP)'
+    @d.l({:x => Sequel::DEFAULT}).must_equal '(x = DEFAULT)'
   end
   
   it "should support negation of SQL::Constants" do
